app/bases/tracker-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tracker-api
  name: tracker-api
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tracker-api
    spec:
      containers:
        - image: gcr.io/track-compliance/api-js:master-94f4d98-1668784619 # {"$imagepolicy": "flux-system:api"}
          name: api
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: 300m
              memory: 70Mi
            requests:
              cpu: 300m
              memory: 70Mi
      volumes:
        - name: database-config
          configMap:
            name: database-config
status: {}
