app/bases/tracker-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tracker-frontend
  name: tracker-frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracker-frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: tracker-frontend
    spec:
      containers:
        - image: gcr.io/track-compliance/frontend:master-f7db471-1690202224 # {"$imagepolicy": "flux-system:frontend"}
          name: frontend
          resources:
            limits:
              cpu: 200m
              memory: 45Mi
            requests:
              cpu: 200m
              memory: 45Mi
status: {}
