app/bases/log4shell-processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: log4shell-processor
  name: log4shell-processor
  namespace: scanners
spec:
  loadBalancerIP: "34.95.53.80"
  ports:
  - name: udp-53
    protocol: UDP
    port: 53
    targetPort: 5353
  selector:
    app: log4shell-processor
  type: LoadBalancer
status:
  loadBalancer: {}
