app/bases/netpol-arangodb.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: coordinator-policy
  namespace: db
spec:
  # ArangoDB coordinators have the label role=coordinator
  podSelector:
    matchLabels:
     role: coordinator
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    # allow inbound traffic from api in the namespace 'api'
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: api
      podSelector:
        matchLabels:
          app: tracker-api
    # or result processor, autoscan, or one-off 'scan-job' from the namespace 'scanners'
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: scanners
      podSelector:
        matchLabels:
          role: result-processor
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: scanners
      podSelector:
        matchLabels:
          role: autoscan
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: scanners
      podSelector:
        matchLabels:
          role: scan-job
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: arangodb
  # DNS queries also need to be allowed
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: arangodb-policy
  namespace: db
spec:
  # ArangoDB pods
  podSelector:
    matchLabels:
     app: arangodb
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # ...need to talk amongst themselves.
  - from:
    - podSelector:
        matchLabels:
          app: arangodb
  # and need to listen to the operator
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: kube-arangodb
  egress:
  # again, talk amongst themselves.
  - to:
    - podSelector:
        matchLabels:
          app: arangodb
  # or the operator
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: kube-arangodb
  # DNS queries also need to be allowed
  - ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
